# SFML_DGM-FSM-lib

./: .gitignore  CMakeLists.txt  Readme.md  changelog.txt  make-release.bat
.github/workflows/: integration.yml  main-android.yml  main-clang.yml  main.yml  release.yml
cmake/: cpp-init.cmake  cpp.cmake  dependencies.cmake  get_cpp_init.cmake  utils.cmake  version.cmake
docs/: Integration.md
examples/: CMakeLists.txt
examples/01-loggable-blackboard/: CMakeLists.txt  Main.cpp
examples/02-simple-fsm/: CMakeLists.txt  Main.cpp
examples/03-exporting-diagrams/: CMakeLists.txt  Main.cpp
examples/include/: CsvBlackboard.hpp  CsvFunctions.hpp
integration_tests/cpm/: CMakeLists.txt
integration_tests/fetch_git/: CMakeLists.txt
integration_tests/fetch_release/: CMakeLists.txt  Main.cpp
lib/: .clang-format  CMakeLists.txt  fsm-libConfig.cmake
lib/include/: Fsm.hpp  FsmBuilder.hpp  FsmDecorators.hpp  FsmFactory.hpp  FsmJsonLoader.hpp  FsmLoader.hpp
lib/include/DGM/: fsm.hpp
lib/include/DGM/classes/: Fsm.hpp  FsmBuilder.hpp  FsmDecorators.hpp  FsmFactory.hpp  FsmJsonLoader.hpp  FsmLoader.hpp  FsmTypes.hpp
lib/include/fsm/: Builder.hpp  Error.hpp  Fsm.hpp  Types.hpp
lib/include/fsm/detail/: BuilderContext.hpp  BuilderContextHelper.hpp  CompiledContext.hpp  Compiler.hpp  Constants.hpp  Helper.hpp  NonEmptyString.hpp  StateIndex.hpp
lib/include/fsm/exports/: ExporterConcept.hpp  MermaidExporter.hpp
lib/include/fsm/logging/: CsvLogger.hpp  LoggerInterface.hpp  NullLogger.hpp
lib/src/: Compiler.cpp  CsvLogger.cpp  FsmFactory.cpp  FsmJsonLoader.cpp  Helper.cpp  StateIndex.cpp
lib/tests/: CMakeLists.txt  CsvParser.hpp  Fsm.cpp  FsmDecorator.cpp  FsmFactory.cpp  FsmJsonLoader.cpp  Main.cpp
tests/: CMakeLists.txt
tests/include/: Blackboard.hpp  CsvParser.hpp  TestableLogger.hpp
tests/src/: BuilderTest.cpp  CompilerTest.cpp  Fsm.cpp  FsmDecorator.cpp  FsmFactory.cpp  FsmJsonLoader.cpp  FsmTest.cpp  HelperTest.cpp  LoggerTest.cpp  MermaidExporterTest.cpp  StateIndexTest.cpp
